# research-pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  todo
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  paper_failure.md
.github/workflows/: ci.yml
app/: .env.example  CLAUDE.md  README.md  metadata.json  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/layout/: dashboard-layout.tsx  header.tsx  sidebar.tsx
app/src/components/shared/: empty-state.tsx  loading-skeleton.tsx  status-badge.tsx
app/src/components/viewer/: code-viewer.tsx  diagram-viewer.tsx  extraction-tree.tsx  markdown-diagram.tsx  summary-tabs.tsx
app/src/lib/: config.ts  pipeline-status.ts  supabase.ts
app/src/pages/: explore.tsx  ingest.tsx  library.tsx  login.tsx  paper-viewer.tsx
app/src/types/: index.ts
app/tests/: apiFetch.test.ts  pipeline-status.test.ts  supabase.test.ts
assets/: README.md
docs/: Roadmap.md  adding-a-domain.md  analysis_results.md  api.md  configuration.md  github-issues-to-create.md  graph_implementation_plan  graph_walkthrough  open-source-launch.md  prompt-engineering.md  self-hosting.md
pipeline/: alembic.ini  e2e_test.py  pipeline_demo.py  pipeline_demo_2.py  pyproject.toml  requirements.txt
pipeline/api/routes/: health.py  papers.py
pipeline/core/: __init__.py  config.py  exceptions.py  retry.py  telemetry.py
pipeline/db/: __init__.py  session.py
pipeline/db/migrations/: env.py
pipeline/domains/: base.py  registry.py
pipeline/domains/ai_ml/: __init__.py
pipeline/domains/ai_ml/prompts/: classify_v1.j2  extract_v1.j2
pipeline/graph/: __init__.py  pipeline.py  state.py
pipeline/graph/nodes/: __init__.py  codegen.py  diagram.py  embed.py  extract.py  report.py  summarise.py
pipeline/models/: __init__.py  extraction.py  output.py
pipeline/pipeline/: __init__.py
pipeline/pipeline/api/: __init__.py  dependencies.py  main.py
pipeline/pipeline/api/routes/: pipeline.py  search.py
pipeline/pipeline/core/: config.py  events.py  retry.py  telemetry.py  utils.py
pipeline/pipeline/db/: engine.py  models.py
pipeline/pipeline/domains/ai_ml/: plugin.py
pipeline/pipeline/domains/ai_ml/prompts/: diagram_v1.j2
pipeline/pipeline/graph/: edges.py  pipeline.py
pipeline/pipeline/graph/nodes/: classify.py  codegen.py  diagram.py  embed.py  extract.py  ingest.py  report.py  summarise.py
pipeline/pipeline/models/: paper.py
pipeline/pipeline/prompts/: codegen_v1.j2  diagram_v1.j2  summarise_v1.j2
pipeline/pipeline/services/: export_service.py  paper_service.py
pipeline/prompts/: classify_v1.j2  codegen_v1.j2  diagram_v1.j2
pipeline/services/: __init__.py  paper_service.py  pipeline_service.py
pipeline/src/api/: dependencies.py  main.py
pipeline/src/api/routes/: __init__.py  health.py  papers.py  pipeline.py  search.py
pipeline/src/core/: __init__.py  config.py  events.py  exceptions.py  logger.py  retry.py  telemetry.py
pipeline/src/db/: engine.py  models.py  session.py
pipeline/src/db/migrations/: env.py
pipeline/src/db/migrations/versions/: 001_initial_schema.py  002_upgrade_embedding_dim.py  003_hard_cut_outputs.py  004_hybrid_sharing_model.py  005_harden_hybrid_sharing.py  006_sanitize_paper_metadata.py
pipeline/src/domains/: __init__.py  base.py  registry.py
pipeline/src/domains/ai_ml/: plugin.py  schema.py
pipeline/src/domains/ai_ml/prompts/: codegen_v1.j2  summarise_v1.j2
pipeline/src/graph/: __init__.py  edges.py  pipeline.py  state.py
pipeline/src/graph/nodes/: __init__.py  _base.py  classify.py  codegen.py  diagram.py  embed.py  extract.py  ingest.py  metadata.py  report.py  summarise.py
pipeline/src/models/: __init__.py  output.py  paper.py  run.py
pipeline/src/prompts/: extract_v1.j2  metadata_v1.j2  summarise_v1.j2
pipeline/src/services/: __init__.py  converters.py  export_service.py  paper_metadata.py  paper_service.py  pipeline_service.py
pipeline/tests/: conftest.py
pipeline/tests/integration/: test_api_papers.py  test_api_pipeline.py  test_pipeline_full.py  test_placeholder_integration.py  test_search.py
pipeline/tests/unit/: test_config.py  test_core.py  test_edges.py  test_events.py  test_exceptions.py  test_models.py  test_paper_dedupe.py  test_retry.py  test_search_embedding.py  test_services.py  test_telemetry.py
(+11 files in other folders)
