[project]
name = "pipeline"
version = "0.1.0"
description = "Research Pilot — AI-powered research paper intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Settings & config
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    # Logging
    "structlog>=25.1.0",
    # LLM routing
    "litellm>=1.67.0",
    # LLM-aware retry / validation
    "tenacity>=9.0.0",
    # Observability
    "langfuse>=2.60.0",
    # Async support
    "anyio>=4.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "freezegun>=1.5.1",
    "types-PyYAML",
]
