[project]
name = "pipeline"
version = "0.1.0"
description = "Research Pilot — AI-powered research paper intelligence pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Settings & config
    "pydantic-settings>=2.7.0",
    "pyyaml>=6.0.2",
    # Logging
    "structlog>=25.1.0",
    # LLM routing
    "litellm>=1.67.0",
    # Structured LLM output validation
    "instructor>=1.7.0",
    # LLM-aware retry / validation
    "tenacity>=9.0.0",
    # Observability
    "langfuse>=2.60.0",
    # Async support
    "anyio>=4.9.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg[binary,pool]>=3.3.3",
    "pgvector>=0.4.2",
    # Graph orchestration
    "langgraph>=0.2.0",
    # Paper fetching
    "arxiv>=2.1.0",
    "httpx>=0.27.0",
    # Prompt templating
    "jinja2>=3.1.0",
    # Notebook export
    "nbformat>=5.10.0",
    # Supabase Storage / DB client
    "supabase>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.8",
    "freezegun>=1.5.1",
    "types-PyYAML",
]

[tool.mypy]
# Pydantic plugin — teaches mypy about field defaults so optional fields
# don't require explicit arguments at call sites.
plugins = ["pydantic.mypy"]
python_version = "3.12"

# Pydantic-specific plugin options
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
